--- a/src/assets/Custom.css
+++ b/src/assets/Custom.css
@@ -1,6 +1,13 @@
-.fixed-drawer-button {
+/* .fixed-drawer-button {
   position: fixed;
   bottom: 20px;
   right: 16px;
+  z-index: 1000;
+} */
+
+.custom-sidebar {
+  position: fixed;
+  top: 0;
+  width: 100%;
   z-index: 1000;
 }
